# IGVC2013

./: .gitignore
jaus/: CMakeLists.txt  manifest.xml
jaus/lib/active-ist/libraries/: FindACTIVE.cmake  FindOpenCV.cmake
jaus/lib/active-ist/libraries/.svn/: entries
jaus/lib/active-ist/libraries/.svn/text-base/: FindVisualLeakDetector.cmake.svn-base  FindZebulon.cmake.svn-base  SetOutputDirectories.cmake.svn-base
jaus/lib/active-ist/libraries/cartographer/trunk/docs/.svn/: entries
jaus/lib/active-ist/libraries/cartographer/trunk/include/cartographer/: boundingsphere.h  map.h
jaus/lib/active-ist/libraries/cartographer/trunk/src/.svn/: entries
jaus/lib/active-ist/libraries/cartographer/trunk/src/cartographer/: objectmap.cpp  pose.cpp  rastermap.cpp
jaus/lib/active-ist/libraries/cartographer/trunk/src/examples/: example_pose.cpp  example_terrain.cpp  example_waypoint.cpp
jaus/lib/active-ist/libraries/cxutils/branches/2.10/.svn/: all-wcprops  entries
jaus/lib/active-ist/libraries/cxutils/branches/2.11/.svn/: all-wcprops  entries
jaus/lib/active-ist/libraries/cxutils/trunk/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
jaus/lib/active-ist/libraries/cxutils/trunk/.svn/: all-wcprops  entries
jaus/lib/active-ist/libraries/cxutils/trunk/build.root/: Makefile  cmake_install.cmake
jaus/lib/active-ist/libraries/cxutils/trunk/build.root/cmake.cxutils.examples/: Makefile  cmake_install.cmake
jaus/lib/active-ist/libraries/cxutils/trunk/build.root/cmake.libcxutils/: Makefile  cmake_install.cmake
jaus/lib/active-ist/libraries/cxutils/trunk/docs/.svn/: all-wcprops  entries
jaus/lib/active-ist/libraries/cxutils/trunk/include/cxutils/: fileio.h  thread.h
jaus/lib/active-ist/libraries/cxutils/trunk/src/cxutils/: mutex.cpp
jaus/lib/active-ist/libraries/cxutils/trunk/src/examples/: example_networking.cpp  example_sharedsocket_testing.cpp  example_timesync.cpp
jaus/lib/active-ist/libraries/jaus++/.svn/: entries
jaus/lib/active-ist/libraries/jaus++/trunk/.svn/: entries
jaus/lib/active-ist/libraries/tinyxml/trunk/.svn/: entries
jaus/msg/: Pose.msg  Velocity.msg
jaus/msg_gen/cpp/include/jaus/: Pose.h  Velocity.h  pose.h
jaus/msg_gen/lisp/: Pose.lisp  Velocity.lisp  _package.lisp  _package_Pose.lisp  _package_Velocity.lisp  _package_pose.lisp  jaus-msg.asd  pose.lisp
jaus/src/: jaus.cpp  jaus_debug
jaus/src/jaus/msg/: _Pose.py  _Velocity.py  __init__.py  _pose.py
vision/: CMakeLists.txt  Makefile  manifest.xml
vision/launch/: polar_nodes.launch
vision/msg/: Feature.msg  Features.msg  HoughLineEndPoints.msg
vision/nodes/: face_dectection.cpp  feature_detection.cpp  feature_tracking.cpp  grayscaler.cpp  hough_lines.cpp  hough_lines_gpu.cpp  image_combiner.cpp  image_filter.cpp  johnny_5.cpp  lane_detector.cpp  log_polar_processor.cpp  log_polar_processor.py  log_polar_processor_cpp.cpp  log_polar_transform.py  log_polar_transform_2.py  orange_detection.py  perspective_correction_test.py  polar_node.py  rgb_threshold_finder.py  threshold_maker.cpp  white_detection.py
vision/prototype/: BGR_test.cpp  BGR_test.py  equalize_hist.cpp
vision/src/: cpu_vs_gpu_profiler.cpp  cuda_test.cpp  lane_thresh.cpp  opencv_cuda_test.cpp  perspective_correction_test.cpp  perspective_correction_test.py  polar_node.py  polar_processor.py  threshold.cpp  threshold_finder.py  vision_decision.cpp  vision_lib.py  vision_lounge.cpp  vision_test.cpp  vision_test_blobs.cpp  visual_navigation_test.py  visualizer.cpp
vision/thresholds/: heat2_lane  heat2_red  hough  hough_gpu  hough_old  lane  lane2  lane3  planks  red
(+2226 files in other folders)
